/*
  CarStandFCOOL API

  An API for managing a cloud-based car dealership service

  The version of the OpenAPI document: 1.0.0

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package openapitools;


message CarListing {

  int64 listingId = 1;

  int64 carId = 2;

  int64 userId = 3;

  // listing type in the website
  enum TypeEnum {
    TypeEnum_UNKNOWN = 0;
    TypeEnum_RENT = 1;
    TypeEnum_BUY = 2;
  }

  TypeEnum type = 4;

  // description of the listing
  string description = 5;

  // date when the car listing was posted
  string posting_date = 6;

  // price of the car
  double sale_price = 7;

  // Promotion status of the listing
  bool promoted = 8;

  // pet status in the store
  enum StatusEnum {
    StatusEnum_UNKNOWN = 0;
    StatusEnum_AVAILABLE = 1;
    StatusEnum_RESERVED = 2;
    StatusEnum_SOLD = 3;
  }

  StatusEnum status = 9;

}
